--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+dj-database-url==0.5.0
 Django==1.11
 django-bootstrap3==11.1.0
 django-rest-framework==0.1.0
@@ -6,6 +7,7 @@ djangorestframework==3.10.3
 djangorestframework-simplejwt==4.3.0
 djoser==2.0.3
 Pillow==6.1.0
-psycopg2==2.8.3
+psycopg2-binary==2.8.4
 PyJWT==1.7.1
+python-decouple==3.3
 pytz==2019.2
