--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
+codegen==1.0
 dj-database-url==0.5.0
-Django==1.11
+Django==1.11.17
 django-bootstrap3==11.1.0
+django-registration==1.0
 django-rest-framework==0.1.0
 django-templated-mail==1.1.1
 djangorestframework==3.10.3
 djangorestframework-simplejwt==4.3.0
 djoser==2.0.3
+patterns==0.3
 Pillow==6.1.0
 psycopg2-binary==2.8.4
 PyJWT==1.7.1
