--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
-Django==2.0
+amqp==2.6.0
+asgiref==3.2.10
+billiard==3.6.3.0
+celery==4.4.6
+confusable-homoglyphs==3.2.0
+Django==2.2
 django-appconf==1.0.4
 django-imagekit==4.0.2
+django-registration==3.1
+future==0.18.2
+kombu==4.6.11
 pilkit==2.0
 Pillow==7.2.0
 pytz==2020.1
+redis==3.5.3
 six==1.15.0
+sqlparse==0.3.1
+vine==1.3.0
