--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,10 @@ django-registration==3.1
 future==0.18.2
 kombu==4.6.11
 pilkit==2.0
-Pillow==7.2.0
+Pillow==8.0.1
 pytz==2020.1
 redis==3.5.3
 six==1.15.0
 sqlparse==0.3.1
 vine==1.3.0
+gunicorn==19.9.0
