--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,34 @@
 amqp==2.6.0
 asgiref==3.2.10
+astroid==2.4.2
 billiard==3.6.3.0
 celery==4.4.6
+colorama==0.4.4
 confusable-homoglyphs==3.2.0
+dj-database-url==0.5.0
 Django==2.2.13
 django-appconf==1.0.4
+django-heroku==0.3.1
 django-imagekit==4.0.2
 django-registration==3.1
 future==0.18.2
+gunicorn==19.9.0
+importlib-metadata==3.1.1
+isort==5.6.4
 kombu==4.6.11
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 pilkit==2.0
 Pillow==8.0.1
+psycopg2==2.8.6
+pylint==2.6.0
 pytz==2020.1
 redis==3.5.3
 six==1.15.0
 sqlparse==0.3.1
+toml==0.10.2
+typed-ast==1.4.1
 vine==1.3.0
-gunicorn==19.9.0
+whitenoise==5.2.0
+wrapt==1.12.1
+zipp==3.4.0
