--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==2.6.0
 asgiref==3.2.10
 astroid==2.4.2
+autopep8==1.5.4
 billiard==3.6.3.0
 celery==4.4.6
 colorama==0.4.4
@@ -8,6 +9,7 @@ confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
 Django==2.2.13
 django-appconf==1.0.4
+django-filter==2.4.0
 django-heroku==0.3.1
 django-imagekit==4.0.2
 django-registration==3.1
@@ -21,6 +23,7 @@ mccabe==0.6.1
 pilkit==2.0
 Pillow==8.0.1
 psycopg2==2.8.6
+pycodestyle==2.6.0
 pylint==2.6.0
 pytz==2020.1
 redis==3.5.3
